[package]
name = "rustrunemetrics"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustrunemetrics"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.90"
chrono = { version = "0.4.38", features = ["serde"] }
const_format = "0.2.33"
serde = { version = "1.0.210", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
ureq = { version = "2.10.1", features = ["json"] }

[dev-dependencies]
clap = { version = "4.5.20", features = ["derive"] }
